--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,17 @@ before_install:
 
 script:
   - docker run docker1875/docker-react npm run test -- --coverage
+
+#DockerReact-env.qipt3jpswm.us-east-2.elasticbeanstalk.com
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "Docker-env"
+  bucket_name: "elasticbeanstalk-us-east-2-330717343488"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_key_id: "$AWS_SECRET_KEY"
   
